# nokizaru

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  DEV_GUIDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  compose.prd.yml  compose.yml
.serena/: project.yml
apps/bot/: Cargo.toml
apps/bot/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
apps/bot/migrations/2024-01-01-000001_create_users/: down.sql  up.sql
apps/bot/module/agent/: Cargo.toml
apps/bot/module/agent/application/: usecase.rs
apps/bot/module/agent/domain/: service.rs
apps/bot/module/slack/: Cargo.toml
apps/bot/module/slack/application/: usecase.rs
apps/bot/module/slack/domain/: errors.rs  models.rs  repositories.rs  services.rs
apps/bot/module/slack/infrastructure/: client.rs  signature.rs
apps/bot/module/user/: Cargo.toml  lib.rs
apps/bot/module/user/application/: usecase.rs
apps/bot/module/user/domain/: errors.rs  mod.rs  models.rs  repositories.rs  services.rs
apps/bot/module/user/infrastructure/: diesel_repository.rs  mod.rs
apps/bot/shared/contracts/: Cargo.toml
apps/bot/shared/contracts/src/: slack.rs
apps/bot/shared/domain/: lib.rs
apps/bot/shared/infrastructure/: Cargo.toml  schema.rs
apps/bot/src/: lib.rs  main.rs
apps/bot/src/api/: mod.rs
apps/bot/src/api/v1/: container.rs  mod.rs  openapi.rs  routes.rs
apps/bot/src/api/v1/dto/: agent.rs  mod.rs  slack.rs
apps/bot/src/api/v1/handler/: agent.rs  mod.rs  slack.rs
apps/bot/src/api/v1/middleware/: signature.rs
docker/: Dockerfile  Dockerfile.dev  compose.prd.yml  compose.yml
nokizaru-api/: Cargo.toml
nokizaru-api/src/: lib.rs  main.rs
nokizaru-api/src/api/: mod.rs
nokizaru-api/src/api/v1/: container.rs  mod.rs  openapi.rs  routes.rs
nokizaru-api/src/api/v1/dto/: agent.rs  error.rs  slack.rs
nokizaru-api/src/api/v1/handler/: agent.rs  docs.rs  mod.rs  slack.rs
nokizaru-api/src/api/v1/middleware/: mod.rs  signature.rs
nokizaru-api/src/application/validation/: slack.rs
nokizaru-core/: Cargo.toml  diesel.toml
nokizaru-core/migrations/2025-12-09-104137_setup/: down.sql  up.sql
nokizaru-core/migrations/2025-12-09-104212_create_spaces/: down.sql  up.sql
nokizaru-core/module/agent/: Cargo.toml  lib.rs
nokizaru-core/module/agent/application/: usecase.rs
nokizaru-core/module/agent/domain/: memory.rs  mod.rs  service.rs
nokizaru-core/module/slack/: Cargo.toml
nokizaru-core/module/slack/application/: usecase.rs
nokizaru-core/module/slack/domain/: model.rs  service.rs
nokizaru-core/module/slack/domain/service/: agent_service.rs  agent_with_tool_sample.rs  event_service.rs  mod.rs  slack_event_service.rs
nokizaru-core/module/slack/infrastructure/: client.rs  mod.rs
nokizaru-core/shared/contract/: Cargo.toml
nokizaru-core/shared/contract/src/: agent.rs
nokizaru-core/shared/domain/: Cargo.toml  error.rs  lib.rs  value_objects.rs
nokizaru-core/shared/infrastructure/: config.rs  database.rs  lib.rs  logging.rs  schema.rs
nokizaru-core/src/: agent_service.rs  container.rs  lib.rs
nokizaru-slack/: Cargo.toml
nokizaru-slack/src/: lib.rs
nokizaru-slack/src/application/: mod.rs
nokizaru-slack/src/domain/: error.rs  mod.rs  repository.rs
nokizaru-slack/src/domain/service/: command_service.rs  event_service.rs  message_context_service.rs  mod.rs
nokizaru-slack/src/infrastructure/: client.rs  mod.rs  slack_api.rs
nokizaru-slack/src/slack_api/: client.rs  error.rs  mod.rs
nokizaru-slack/src/slack_api/api/: api.rs  chat.rs  conversations.rs  mod.rs  model.rs  reactions.rs  search.rs  users.rs
supabase/: config.toml
