[workspace]
members = [
    "nokizaru-core",
    "nokizaru-api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[workspace.dependencies]
# 非同期ランタイム
tokio = { version = "1.40", features = ["full"] }

# Webフレームワーク（Axum）
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Slack SDK
slack-morphism = "2.6"

# HTTPクライアント
reqwest = { version = "0.12", features = ["json"] }

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# エラーハンドリング
anyhow = "1.0"
thiserror = "2.0"

# 環境変数管理
dotenvy = "0.15"

# ロギング
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# セキュリティ（Slack署名検証）
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# 日時処理
chrono = { version = "0.4", features = ["serde"] }

# UUID生成
uuid = { version = "1.11", features = ["v4", "serde"] }

# 非同期trait
async-trait = "0.1"

# AI Framework (Rig)
rig-core = "0.5"

# Diesel ORM
diesel = { version = "2.2", features = ["postgres", "uuid", "chrono", "r2d2"] }
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }

# OpenAPI and Schema Generation
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
