[package]
name = "nokizaru-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
# nokizaru-core コアビジネスロジック依存
nokizaru-core = { path = "../nokizaru-core" }

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
async-trait.workspace = true

[lib]
name = "nokizaru_api"
path = "src/lib.rs"

[[bin]]
name = "nokizaru-api"
path = "src/main.rs"

[[bin]]
name = "slack-post"
path = "src/bin/slack_post.rs"

[[bin]]
name = "slack-fetch"
path = "src/bin/slack_fetch.rs"
