[package]
name = "nokizaru-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
diesel.workspace = true
diesel-async.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
chrono.workspace = true
futures.workspace = true
rig-core.workspace = true
schemars.workspace = true

# Local modules
shared-infrastructure = { path = "shared/infrastructure" }

[lib]
name = "nokizaru_core"
path = "src/lib.rs"
