[package]
name = "nokizaru-slack"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nokizaru-core = { path = "../nokizaru-core" }

tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
slack-morphism.workspace = true
reqwest.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
futures.workspace = true
rig-core.workspace = true
schemars.workspace = true

[lib]
name = "nokizaru_slack"
path = "src/lib.rs"
