[package]
name = "nokizaru-bot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
thiserror.workspace = true
diesel.workspace = true
diesel-async.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
reqwest.workspace = true
chrono.workspace = true

# Local modules
slack = { path = "module/slack" }
agent = { path = "module/agent" }
contracts = { path = "shared/contracts" }
shared-domain = { path = "shared/domain" }
shared-infrastructure = { path = "shared/infrastructure" }

[[bin]]
name = "nokizaru-bot"
path = "src/main.rs"

[[bin]]
name = "slack-post"
path = "src/bin/slack_post.rs"

[[bin]]
name = "slack-fetch"
path = "src/bin/slack_fetch.rs"

[lib]
name = "nokizaru_bot"
path = "src/lib.rs"
