[package]
name = "user"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
diesel.workspace = true
diesel-async.workspace = true

# Local dependencies
shared-domain = { path = "../../shared/domain" }
shared-infrastructure = { path = "../../shared/infrastructure" }

[lib]
path = "lib.rs"
