[package]
name = "shared-infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
thiserror.workspace = true
diesel.workspace = true
diesel-async.workspace = true

[lib]
path = "lib.rs"
